Fixed Defect no 290 , 297 and alignment issuse on lookup entity ,dispute & contact. Files modified - [Contact,DisputeList,Home,OrderManagement,PARRReports,lookupEntity]

--- a/src/main/webapp/pages/Home/Home.css
+++ b/src/main/webapp/pages/Home/Home.css
@@ -82,3 +82,9 @@ input#WorkCategoryMutliSelForBanView {
     border-radius: unset;
     border-color: #4B286D !important;
 }
+
+.Table-Font{
+    
+    font-size: 12px;
+    overflow: auto;
+}
